# nectar-lang

./: .replit  Cargo.toml  README.md  compile.sh  run.sh
examples/: aliases.nectar  animals.nectar  blog.nectar  chemistry.nectar  hello.nectar  key-value.nectar  lord-of-the-rings.nectar  objects.nectar  pac-man.nectar  planets.nectar  scope.nectar  scoped-aliases.nectar  sports.nectar  timeline.nectar
pkg/: README.md  nectar_lib.d.ts  nectar_lib.js  nectar_lib_bg.d.ts  nectar_lib_bg.js  nectar_lib_bg.wasm  package.json
src/: grammar.pest  interpreter.rs  interpreter.ts  json_ast.rs  lib.rs  main.rs  main.ts  parser.rs  parser_json.rs  repl.ts  types.rs  types.ts
src/parser/: mod.rs  nectar-parser.pest
