[package]
name = "nectar-lang"
version = "0.0.0"
authors = ["Darryl Yeo <dev@darryl-yeo.com>"]
edition = "2018"

[lib]
name = "nectar_lib"
crate-type = ["cdylib"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
pest_consume = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "=0.2.61"